// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> should focus the input 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  isControlled={false}
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[MockFunction]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  translateErrorText={true}
  type="text"
  value=""
>
  <div
    className="css-e4z0u6 textField"
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen hint"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-u7lqu6 css-1fekhao label"
        htmlFor="test-input"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </label>
    </Label>
    <FormElement
      id="test-input"
      isControlled={false}
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <_default
        className="css-keangt"
        id="test-input"
        isControlled={false}
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          attributes={null}
          autoComplete={false}
          autoCorrect={false}
          className="css-keangt"
          disabled={false}
          id="test-input"
          isControlled={false}
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onKeyPress={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-keangt simpleInput"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value=""
          />
        </SimpleInput>
      </_default>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "var(--color-primary, #fa5400)",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className=""
      errorText=""
      translate={true}
      validationError={null}
    >
      <div
        className="css-hmgfge errorText"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should receive the correct value while typing 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  isControlled={false}
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  translateErrorText={true}
  type="text"
  value=""
>
  <div
    className="css-e4z0u6 textField"
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen hint"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-u7lqu6 css-1fekhao label"
        htmlFor="test-input"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </label>
    </Label>
    <FormElement
      id="test-input"
      isControlled={false}
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <_default
        className="css-keangt"
        id="test-input"
        isControlled={false}
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          attributes={null}
          autoComplete={false}
          autoCorrect={false}
          className="css-keangt"
          disabled={false}
          id="test-input"
          isControlled={false}
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onKeyPress={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-keangt simpleInput"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="foobar"
          />
        </SimpleInput>
      </_default>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "var(--color-primary, #fa5400)",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className=""
      errorText=""
      translate={true}
      validationError={null}
    >
      <div
        className="css-hmgfge errorText"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should render a simple text field 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  isControlled={false}
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  translateErrorText={true}
  type="text"
  value=""
>
  <div
    className="css-e4z0u6 textField"
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen hint"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-u7lqu6 css-1fekhao label"
        htmlFor="test-input"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </label>
    </Label>
    <FormElement
      id="test-input"
      isControlled={false}
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <_default
        className="css-keangt"
        id="test-input"
        isControlled={false}
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          attributes={null}
          autoComplete={false}
          autoCorrect={false}
          className="css-keangt"
          disabled={false}
          id="test-input"
          isControlled={false}
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onKeyPress={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-keangt simpleInput"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value=""
          />
        </SimpleInput>
      </_default>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "var(--color-primary, #fa5400)",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className=""
      errorText=""
      translate={true}
      validationError={null}
    >
      <div
        className="css-hmgfge errorText"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should render the text field as password 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  isControlled={false}
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={true}
  setRef={[Function]}
  translateErrorText={true}
  type="text"
  value=""
>
  <div
    className="css-e4z0u6 textField"
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen hint"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-u7lqu6 css-1fekhao label"
        htmlFor="test-input"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </label>
    </Label>
    <FormElement
      id="test-input"
      isControlled={false}
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={true}
      setRef={[Function]}
      type="text"
      value=""
    >
      <_default
        className="css-keangt"
        id="test-input"
        isControlled={false}
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={true}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          attributes={null}
          autoComplete={false}
          autoCorrect={false}
          className="css-keangt"
          disabled={false}
          id="test-input"
          isControlled={false}
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onKeyPress={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={true}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-keangt simpleInput"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="password"
            value=""
          />
        </SimpleInput>
      </_default>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "var(--color-primary, #fa5400)",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className=""
      errorText=""
      translate={true}
      validationError={null}
    >
      <div
        className="css-hmgfge errorText"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should render the text field with a default value 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  isControlled={false}
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  translateErrorText={true}
  type="text"
  value="FooBar"
>
  <div
    className="css-e4z0u6 textField"
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen hint"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={true}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-u7lqu6 css-16msjt6 css-1fekhao label"
        htmlFor="test-input"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </label>
    </Label>
    <FormElement
      id="test-input"
      isControlled={false}
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value="FooBar"
    >
      <_default
        className="css-keangt"
        id="test-input"
        isControlled={false}
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value="FooBar"
      >
        <SimpleInput
          attributes={null}
          autoComplete={false}
          autoCorrect={false}
          className="css-keangt"
          disabled={false}
          id="test-input"
          isControlled={false}
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onKeyPress={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value="FooBar"
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-keangt simpleInput"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="FooBar"
          />
        </SimpleInput>
      </_default>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "var(--color-primary, #fa5400)",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className=""
      errorText=""
      translate={true}
      validationError={null}
    >
      <div
        className="css-hmgfge errorText"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should replace the error text with custom validation error 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  isControlled={false}
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  translateErrorText={true}
  type="text"
  value=""
>
  <div
    className="css-e4z0u6 textField"
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen hint"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </div>
    </Hint>
    <Label
      hasErrorMessage={true}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-u7lqu6 css-1fekhao label"
        htmlFor="test-input"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </label>
    </Label>
    <FormElement
      id="test-input"
      isControlled={false}
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <_default
        className="css-keangt"
        id="test-input"
        isControlled={false}
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          attributes={null}
          autoComplete={false}
          autoCorrect={false}
          className="css-keangt"
          disabled={false}
          id="test-input"
          isControlled={false}
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onKeyPress={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-keangt simpleInput"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value=""
          />
        </SimpleInput>
      </_default>
    </FormElement>
    <Underline
      hasErrorMessage={true}
      isFocused={false}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "#ff0000",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className=""
      errorText=""
      translate={true}
      validationError="Custom validation error"
    >
      <div
        className="css-hmgfge errorText"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string="Custom validation error"
          transform={null}
        >
          <span
            className={null}
            role={null}
          >
            Custom validation error
          </span>
        </Translate>
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should sanitize the input 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  isControlled={false}
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  translateErrorText={true}
  type="text"
  value=""
>
  <div
    className="css-e4z0u6 textField"
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen hint"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-u7lqu6 css-1fekhao label"
        htmlFor="test-input"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </label>
    </Label>
    <FormElement
      id="test-input"
      isControlled={false}
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <_default
        className="css-keangt"
        id="test-input"
        isControlled={false}
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          attributes={null}
          autoComplete={false}
          autoCorrect={false}
          className="css-keangt"
          disabled={false}
          id="test-input"
          isControlled={false}
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onKeyPress={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-keangt simpleInput"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="FOOBAR"
          />
        </SimpleInput>
      </_default>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "var(--color-primary, #fa5400)",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className=""
      errorText=""
      translate={true}
      validationError={null}
    >
      <div
        className="css-hmgfge errorText"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should show the error message 1`] = `
<TextField
  className=""
  errorText="This is an error here"
  hintText=""
  isControlled={false}
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  translateErrorText={true}
  type="text"
  value=""
>
  <div
    className="css-e4z0u6 textField"
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen hint"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </div>
    </Hint>
    <Label
      hasErrorMessage={true}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-u7lqu6 css-1fekhao label"
        htmlFor="test-input"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </label>
    </Label>
    <FormElement
      id="test-input"
      isControlled={false}
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <_default
        className="css-keangt"
        id="test-input"
        isControlled={false}
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          attributes={null}
          autoComplete={false}
          autoCorrect={false}
          className="css-keangt"
          disabled={false}
          id="test-input"
          isControlled={false}
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onKeyPress={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-keangt simpleInput"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value=""
          />
        </SimpleInput>
      </_default>
    </FormElement>
    <Underline
      hasErrorMessage={true}
      isFocused={false}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "#ff0000",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className=""
      errorText="This is an error here"
      translate={true}
      validationError={null}
    >
      <div
        className="css-hmgfge errorText"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string="This is an error here"
          transform={null}
        >
          <span
            className={null}
            role={null}
          >
            This is an error here
          </span>
        </Translate>
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should show the hint text 1`] = `
<TextField
  className=""
  errorText=""
  hintText="This is the hint text"
  isControlled={false}
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  translateErrorText={true}
  type="text"
  value=""
>
  <div
    className="css-e4z0u6 textField"
  >
    <Hint
      hintText="This is the hint text"
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen hint"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string="This is the hint text"
          transform={null}
        >
          <span
            className={null}
            role={null}
          >
            This is the hint text
          </span>
        </Translate>
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-u7lqu6 css-1fekhao label"
        htmlFor="test-input"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </label>
    </Label>
    <FormElement
      id="test-input"
      isControlled={false}
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <_default
        className="css-keangt"
        id="test-input"
        isControlled={false}
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          attributes={null}
          autoComplete={false}
          autoCorrect={false}
          className="css-keangt"
          disabled={false}
          id="test-input"
          isControlled={false}
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onKeyPress={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-keangt simpleInput"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value=""
          />
        </SimpleInput>
      </_default>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "var(--color-primary, #fa5400)",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className=""
      errorText=""
      translate={true}
      validationError={null}
    >
      <div
        className="css-hmgfge errorText"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should show the label 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  isControlled={false}
  label="This is the label"
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  translateErrorText={true}
  type="text"
  value=""
>
  <div
    className="css-e4z0u6 textField"
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen hint"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label="This is the label"
      name="test-input"
    >
      <label
        className="css-u7lqu6 css-1fekhao label"
        htmlFor="test-input"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string="This is the label"
          transform={null}
        >
          <span
            className={null}
            role={null}
          >
            This is the label
          </span>
        </Translate>
      </label>
    </Label>
    <FormElement
      id="test-input"
      isControlled={false}
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <_default
        className="css-keangt"
        id="test-input"
        isControlled={false}
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          attributes={null}
          autoComplete={false}
          autoCorrect={false}
          className="css-keangt"
          disabled={false}
          id="test-input"
          isControlled={false}
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onKeyPress={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-keangt simpleInput"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value=""
          />
        </SimpleInput>
      </_default>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "var(--color-primary, #fa5400)",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className=""
      errorText=""
      translate={true}
      validationError={null}
    >
      <div
        className="css-hmgfge errorText"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should trigger the validation callback 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  isControlled={false}
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  onSanitize={[Function]}
  onValidate={
    [MockFunction] {
      "calls": Array [
        Array [
          "",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  password={false}
  setRef={[Function]}
  translateErrorText={true}
  type="text"
  value=""
>
  <div
    className="css-e4z0u6 textField"
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen hint"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-u7lqu6 css-1fekhao label"
        htmlFor="test-input"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </label>
    </Label>
    <FormElement
      id="test-input"
      isControlled={false}
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <_default
        className="css-keangt"
        id="test-input"
        isControlled={false}
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          attributes={null}
          autoComplete={false}
          autoCorrect={false}
          className="css-keangt"
          disabled={false}
          id="test-input"
          isControlled={false}
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onKeyPress={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-keangt simpleInput"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value=""
          />
        </SimpleInput>
      </_default>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "var(--color-primary, #fa5400)",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className=""
      errorText=""
      translate={true}
      validationError={null}
    >
      <div
        className="css-hmgfge errorText"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string=""
          transform={null}
        />
      </div>
    </ErrorText>
  </div>
</TextField>
`;
